--- a/CookSmart/Views/Base.lproj/Main.storyboard
+++ b/CookSmart/Views/Base.lproj/Main.storyboard
@@ -1436,7 +1436,7 @@
                                 <rect key="frame" x="20" y="431" width="374" height="47"/>
                                 <color key="tintColor" name="ColorOrange"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="ADD INGREDINT">
+                                <buttonConfiguration key="configuration" style="plain" title="ADD INGREDIENT">
                                     <fontDescription key="titleFontDescription" type="system" weight="medium" pointSize="27"/>
                                 </buttonConfiguration>
                                 <connections>
